k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: mniak/echo
        ports:
        - containerPort: 80
      - name: proxy
        image: mniak/sidecar_proxy_demo
